# helmbench

./: .ctxhelmignore  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
docs/: architecture.md  autopsy.md  claude-code-events.md  claude-real-smoke.md  ctxhelm-runs.md  demo-benchmark.md  direct-agent-runs.md  direct-runner-runtime.md  example-autopsy.md  example-benchmark-summary.md  example-claude-compare.md  example-compare.md  example-dashboard.html  install.md  launch-proof.md  launch-readiness.md  local-runner.md  public-suites.md  refactoringminer-ctxhelm-plan.md  refactoringminer-public-proof.md  run-matrix.md  schemas.md  stream-traces.md  suite-health.md
reports/: claude-real-smoke.json  direct-runner-runtime.json  example-claude-code.json  example-ctxhelm-plan-meta.json  example-ctxhelm.json  example-native.json  launch-readiness.json  refactoringminer-ctxhelm-plan.json  refactoringminer-git-regressions-health.json  refactoringminer-outcome-health.json  refactoringminer-suite-health.json
schemas/: agent-event.schema.json  agent-trace.schema.json  autopsy.schema.json  benchmark-summary.schema.json  compare-report.schema.json  diff-autopsy.schema.json  doctor-report.schema.json  evidence-bundle.schema.json  launch-readiness.schema.json  matrix-history.schema.json  quality-gate.schema.json  run-matrix-config.schema.json  run-matrix-manifest.schema.json  run-matrix-privacy-report.schema.json  run-report.schema.json  suite-health.schema.json  task-suite.schema.json
scripts/: demo-ctxhelm.sh  demo-local-agent.sh  demo-stream-agent.sh  verify.sh
(+89 files in other folders)
