[package]
name = "helmbench"
version = "0.1.0"
edition = "2021"
description = "Source-free benchmark and observability harness for AI coding agents"
license = "MIT"
repository = "https://github.com/thromel/helmbench"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
